# automud

./: .gitignore  README.md  automud.py  automud_cdda.py  pyproject.toml
.github/workflows/: publish.yml
tests/: __init__.py  test_automud.py  test_cdda.py
tests/fixtures/: charsheet120.txt  craft120.txt  death.txt  dialogue120.txt  game120.txt  inventory120.txt  look120.txt  overlay120.txt  recipe120.txt  surroundings120.txt
