[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "automud"
version = "0.1.1"
description = "Persistent telnet/MUD session manager you drive by hand or with an agent. No LLM, no API key."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Charles Norton" }]
keywords = ["mud", "telnet", "gmcp", "agent", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Communications",
]

[project.urls]
Homepage = "https://github.com/CharlesCNorton/automud"
Source = "https://github.com/CharlesCNorton/automud"

[project.scripts]
automud = "automud:main"

[tool.setuptools]
py-modules = ["automud"]
